<resources>
    <string name="app_name">SOS Application</string>
    <string name="info">Press the button below to send sos message</string>
    <string name="add_or_edit">Add or edit SOS contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit Details</string>
    <string name="delete">Delete</string>
</resources>